// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component should allow config activation of a tab: config 1`] = `
<Grid
  className="curiosity-tabs-container"
>
  <GridItem
    span={12}
  >
    <Tabs
      activeKey={1}
      backScrollAriaLabel="Scroll back"
      className="curiosity-tabs__no-scroll "
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      id="generatedid-"
      inset={
        {
          "default": "insetNone",
          "md": "insetLg",
        }
      }
      isBox={false}
      isFilled={false}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={true}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={true}
      variant="default"
    >
      <Tab
        eventKey={0}
        title={
          <TabTitleText>
            lorem
          </TabTitleText>
        }
      >
        ipsum
      </Tab>
      <Tab
        eventKey={1}
        title={
          <TabTitleText>
            dolor
          </TabTitleText>
        }
      >
        sit
      </Tab>
    </Tabs>
  </GridItem>
</Grid>
`;

exports[`Tabs Component should allow specific activation of a tab: specific 1`] = `
<Grid
  className="curiosity-tabs-container"
>
  <GridItem
    span={12}
  >
    <Tabs
      activeKey={2}
      backScrollAriaLabel="Scroll back"
      className="curiosity-tabs__no-scroll "
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      id="generatedid-"
      inset={
        {
          "default": "insetNone",
          "md": "insetLg",
        }
      }
      isBox={false}
      isFilled={false}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={true}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={true}
      variant="default"
    >
      <Tab
        eventKey={0}
        title={
          <TabTitleText>
            lorem
          </TabTitleText>
        }
      >
        ipsum
      </Tab>
      <Tab
        eventKey={1}
        title={
          <TabTitleText>
            dolor
          </TabTitleText>
        }
      >
        sit
      </Tab>
      <Tab
        eventKey={2}
        title={
          <TabTitleText>
            hello
          </TabTitleText>
        }
      >
        world
      </Tab>
    </Tabs>
  </GridItem>
</Grid>
`;

exports[`Tabs Component should handle no tabs: no tabs 1`] = `
<Grid
  className="curiosity-tabs-container"
>
  <GridItem
    span={12}
  >
    <Tabs
      activeKey={0}
      backScrollAriaLabel="Scroll back"
      className="curiosity-tabs__no-scroll "
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      id="generatedid-"
      inset={
        {
          "default": "insetNone",
          "md": "insetLg",
        }
      }
      isBox={false}
      isFilled={false}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={true}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={true}
      variant="default"
    />
  </GridItem>
</Grid>
`;

exports[`Tabs Component should render a basic component: basic 1`] = `
<tabs
  props="{
  "tabs": [
    {
      "title": "lorem",
      "content": "ipsum"
    },
    {
      "title": "dolor",
      "content": "sit"
    }
  ],
  "className": "",
  "defaultActiveTab": 0,
  "hasOverflowScroll": false,
  "children": []
}"
>
  <div
    class="pf-v5-l-grid curiosity-tabs-container"
  >
    <div
      class="pf-v5-l-grid__item pf-m-12-col"
    >
      <div
        class="pf-v5-c-tabs pf-m-inset-none pf-m-inset-lg-on-md curiosity-tabs__no-scroll "
        data-ouia-component-id="OUIA-Generated-Tabs-1"
        data-ouia-component-type="PF5/Tabs"
        data-ouia-safe="true"
        id="generatedid-"
      >
        <ul
          class="pf-v5-c-tabs__list"
          role="tablist"
        >
          <li
            class="pf-v5-c-tabs__item pf-m-current"
            role="presentation"
          >
            <button
              aria-controls="pf-tab-section-0-generatedid-"
              aria-selected="true"
              class="pf-v5-c-tabs__link"
              data-ouia-component-type="PF5/TabButton"
              data-ouia-safe="true"
              id="pf-tab-0-generatedid-"
              role="tab"
              type="button"
            >
              <span
                class="pf-v5-c-tabs__item-text"
              >
                lorem
              </span>
            </button>
          </li>
          <li
            class="pf-v5-c-tabs__item"
            role="presentation"
          >
            <button
              aria-selected="false"
              class="pf-v5-c-tabs__link"
              data-ouia-component-type="PF5/TabButton"
              data-ouia-safe="true"
              id="pf-tab-1-generatedid-"
              role="tab"
              type="button"
            >
              <span
                class="pf-v5-c-tabs__item-text"
              >
                dolor
              </span>
            </button>
          </li>
        </ul>
      </div>
      <section
        aria-labelledby="pf-tab-0-generatedid-"
        class="pf-v5-c-tab-content"
        data-ouia-component-type="PF5/TabContent"
        data-ouia-safe="true"
        id="pf-tab-section-0-generatedid-"
        role="tabpanel"
        tabindex="0"
      >
        ipsum
      </section>
    </div>
  </div>
</tabs>
`;
